--- a/css/reset.css
+++ b/css/reset.css
@@ -1,7 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+/* http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 */
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -19,15 +16,16 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
 	font: inherit;
+	font-size: 100%;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display: block;
+  display: block;
 }
+
 body {
 	line-height: 1;
 }
@@ -37,7 +35,8 @@ ol, ul {
 blockquote, q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
+
+blockquote::before, blockquote::after,
 q:before, q:after {
 	content: '';
 	content: none;
@@ -49,17 +48,24 @@ table {
 
 /* Reset perso */
 a, del, ins {
-	text-decoration: none;
+  text-decoration: none;
 }
 a {
-	color: inherit;
+  color: inherit;
 }
+
 label, button {
-	cursor: pointer;
+  cursor: pointer;
 }
+
+html {
+  box-sizing: border-box
+}
+
 *, *::before, *::after {
-	box-sizing: border-box;
+  box-sizing: inherit
 }
+
 input, button {
-	outline: 0;
+  outline: 0;
 }
